@@ -105,6 +105,8 @@ params {
       samtools = "bioconda::samtools=1.9"
       snpeff = "bioconda::snpeff=4.3.1t"
       tabix = "bioconda::tabix=0.2.6"
+      mosdepth = "bioconda::mosdepth=0.3.1"
+      picard = "bioconda::picard=2.19.0=0"
       vcftools = "bioconda::vcftools=0.1.16"
     }
 
