@@ -18,8 +18,8 @@ params {
   maxTime = 48.h
 
   // Input data - Sample Plan
-  samplePlan = "$baseDir/test/csv/hpc-bench-wgs-13x.csv"
-  //samplePlan = "$baseDir/test/csv/hpc-bench-wgs-13x_ubam.csv"
+  //samplePlan = "$baseDir/test/csv/hpc-bench-wgs-13x.csv"
+  samplePlan = "$baseDir/test/csv/hpc-bench-wgs-13x_ubam.csv"
   //design = "$baseDir/test/csv/hpc-bench-wgs-13x-design.csv"
 
   // Annotations
