@@ -2,6 +2,8 @@ version-0.1.1
 
 SIGNIFICANT USER-VISIBLE CHANGES
 
+  - Report insert size distribution with picard
+  - Add coverage stats with mosdepth
   - The design file is now optional
   - Update the multiQC report
   - Replace --outputDir by --outDir
